<resources>
    <string name="app_name">Wojak</string>
    <string name="create_portfolio">Create portfolio</string>
    <string name="track_your_crypto">Track your cryptocurrency portfolio in realtime</string>
    <string name="my_portfolio">My Portfolio</string>
    <string name="top_10_coins">TOP 10 Coins</string>
    <string name="crypto_news">Crypto News</string>
    <string name="startups">Startups</string>
    <string name="chart">Chart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="assets">Assets</string>
    <string name="add_new_coin">Add new coin</string>
    <string name="recommended_to_buy">Recommended to Buy</string>
    <string name="home">Home</string>
    <string name="alerts">Alerts</string>
    <string name="holdings">Holdings</string>
    <string name="trending">Trending</string>
    <string name="add">Add</string>
    <string name="view_all">View all</string>
    <string name="market">Market</string>
    <string name="exchanges">Exchanges</string>
    <string name="add_to_portfolio">Add to portfolio</string>
    <string name="ytd">Ytd</string>
    <string name="_1y">1y</string>
    <string name="_30d">30d</string>
    <string name="_7d">7d</string>
    <string name="_24h">24h</string>
    <string name="_1h">1h</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="vol">Vol</string>
    <string name="transactions">Transactions</string>
    <string name="back">Back</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="_0_00">0.00</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="sold">Sold</string>
    <string name="bought">Bought</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="airdrop">Airdrop</string>
    <string name="add_alert">Add Alert</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete">Delete</string>
    <string name="market_cap">Market Cap</string>
    <string name="price">Price</string>
    <string name="price_change">Price change</string>
    <string name="market_price">Market Price</string>
    <string name="since_24h">Since 24h</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="goal_title">Goal Title</string>
    <string name="enter_goal_amount_in_btc">Enter Goal Amount in BTC</string>
    <string name="anytime">Anytime</string>
    <string name="weekend">Weekend</string>
    <string name="weekends_only">Weekends only</string>
    <string name="_1_day">1 day</string>
    <string name="goals">Goals</string>
    <string name="all">All</string>
    <string name="convert">Convert</string>
    <string name="swap">Swap</string>
    <string name="portfolio">Portfolio</string>
    <string name="earn">Earn</string>
    <string name="groups">Groups</string>
    <string name="_1m">1m</string>
    <string name="last_1y">Last 1y</string>
    <string name="last_30d">Last 30d</string>
    <string name="last_7d">Last 7d</string>
    <string name="last_24h">Last 24h</string>
    <string name="spent">Spent</string>
    <string name="average_price">Avg Price</string>
    <string name="total_spent">Total Spent</string>
    <string name="edit">Edit</string>
    <string name="edit_price">Edit Price</string>
    <string name="reset">Reset</string>
    <string name="enter_price">Enter Price</string>
    <string name="your_price">Your Price</string>
    <string name="filter">Filter</string>
    <string name="channel_name">Wojak Channel</string>
    <string name="channel_description">Price Alert Notification</string>
    <string name="add_a_currency">Add a Currency</string>
    <string name="has_a_goal">Has a goal</string>
    <string name="only_loss">Only loss</string>
    <string name="only_profits">Only profits</string>
    <string name="profits_and_loss">Profits and Loss</string>
    <string name="done">Done</string>
    <string name="edit_amount">Edit Amount</string>
    <string name="transaction_info">Transaction Info</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="timestamp">Timestamp</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="search">Search</string>
</resources>