<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet"
    android:paddingVertical="16dp">

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:rotation="45"
        android:src="@drawable/ic_round_add_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/md_theme_light_onSurfaceVariant" />

    <TextView
        android:id="@+id/reset"
        style="@style/QuickSandMedium14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:text="@string/reset"
        android:textColor="@color/md_theme_light_onSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        style="@style/QuickSandMedium18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_price"
        android:textColor="@color/md_theme_light_onSecondaryContainer"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel" />

    <TextView
        android:id="@+id/edit"
        style="@style/QuickSandMedium20"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_primary_light_selector_10"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <EditText
        android:id="@+id/text"
        style="@style/Neue40"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/_0_00"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:lines="1"
        android:maxLength="8"
        android:paddingHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>