<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primary"
    tools:context=".ui.transaction.NewTransactionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/bottom_sheet"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:paddingHorizontal="26dp"
            android:paddingVertical="10dp"
            android:rotation="180"
            android:src="@drawable/ic_arrow___right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            style="@style/QuickSandMedium18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/md_theme_light_onSecondaryContainer"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView3"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <EditText
            android:id="@+id/amount"
            style="@style/Neue40"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/_0_00"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="8"
            android:paddingHorizontal="50dp"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/addTransaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.37" />

        <Button
            android:id="@+id/addTransaction"
            style="@style/QuickSandMedium14"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:gravity="center"
            android:text="@string/add_transaction"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView10"
            style="@style/QuickSandMedium14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_amount"
            android:textColor="@color/md_theme_light_onSecondaryContainer"
            app:layout_constraintBottom_toTopOf="@+id/amount"
            app:layout_constraintEnd_toEndOf="@+id/amount"
            app:layout_constraintStart_toStartOf="@+id/amount" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/addTransaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="26dp"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="false"
                    android:textAppearance="@style/ChipViewText"
                    app:chipBackgroundColor="@color/white"
                    app:chipIcon="@drawable/ic_edit"
                    app:chipStrokeColor="@color/white" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/sent"
                    android:textAppearance="@style/ChipViewText"
                    app:checkedIcon="@drawable/ic_tick_square"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/received"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="true"
                    android:text="@string/received"
                    android:textAppearance="@style/ChipViewText"
                    app:checkedIcon="@drawable/ic_tick_square"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bought"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/bought"
                    android:textAppearance="@style/ChipViewText"
                    app:checkedIcon="@drawable/ic_tick_square"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/sold"
                    android:textAppearance="@style/ChipViewText"
                    app:checkedIcon="@drawable/ic_tick_square"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/airdrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/airdrop"
                    android:textAppearance="@style/ChipViewText"
                    app:checkedIcon="@drawable/ic_tick_square"
                    app:checkedIconEnabled="true" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>