<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    tools:context=".ui.add.AddToPortfolioFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/back"
        android:paddingHorizontal="26dp"
        android:paddingVertical="10dp"
        android:rotation="180"
        android:src="@drawable/ic_arrow___right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/choose"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/shape_primary_selector_10"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            style="@style/QuickSandMedium12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/md_theme_light_onSecondaryContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView3"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/amount"
        style="@style/Neue40"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/_0_00"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:lines="1"
        android:maxLength="8"
        android:textSize="50sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/goalLayout"
        app:layout_constraintStart_toStartOf="@+id/amountLabel"
        app:layout_constraintTop_toBottomOf="@+id/amountLabel" />

    <Button
        android:id="@+id/addToPortfolio"
        style="@style/QuickSandMedium14"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:gravity="center"
        android:text="@string/add_to_portfolio"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/amountLabel"
        style="@style/QuickSandMedium14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_goal_amount_in_btc"
        android:textColor="@color/md_theme_light_onSecondaryContainer"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/goalLayout"
        app:layout_constraintTop_toBottomOf="@+id/goalLayout" />

    <TextView
        android:id="@+id/goalDesc"
        style="@style/QuickSandMedium14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="26dp"
        android:textColor="@color/md_theme_light_onSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/goalDesc"
        app:layout_constraintTop_toBottomOf="@+id/goalDesc"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/yes"
            android:textAppearance="@style/ChipViewText" />

        <com.google.android.material.chip.Chip
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:text="@string/no"
            android:textAppearance="@style/ChipViewText" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goalLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/goalDesc"
        app:layout_constraintStart_toStartOf="@+id/goalDesc"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goalTitle"
            style="@style/QuickSandMedium16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goal_title"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>